impl norec