@@ -6,7 +6,6 @@ import sqlancer.DBMSSpecificOptions;
 import sqlancer.OracleFactory;
 import sqlancer.cnosdb.CnosDBOptions.CnosDBOracleFactory;
 import sqlancer.cnosdb.oracle.CnosDBNoRECOracle;
-import sqlancer.cnosdb.oracle.CnosDBPivotedQuerySynthesisOracle;
 import sqlancer.cnosdb.oracle.tlp.CnosDBTLPAggregateOracle;
 import sqlancer.cnosdb.oracle.tlp.CnosDBTLPHavingOracle;
 import sqlancer.cnosdb.oracle.tlp.CnosDBTLPWhereOracle;
@@ -14,7 +13,6 @@ import sqlancer.common.oracle.CompositeTestOracle;
 import sqlancer.common.oracle.TestOracle;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 @Parameters(separators = "=", commandDescription = "CnosDB (default port: " + CnosDBOptions.DEFAULT_PORT
@@ -25,50 +23,48 @@ public class CnosDBOptions implements DBMSSpecificOptions<CnosDBOracleFactory> {
     public static final int DEFAULT_PORT = 31001;
 
     @Parameter(names = "--oracle", description = "Specifies which test oracle should be used for CnosDB")
-    public List<CnosDBOracleFactory> oracle = Arrays.asList(CnosDBOracleFactory.QUERY_PARTITIONING);
+    public List<CnosDBOracleFactory> oracle = List.of(CnosDBOracleFactory.QUERY_PARTITIONING);
 
     @Parameter(names = "--connection-url", description = "Specifies the URL for connecting to the CnosDB", arity = 1)
-    public String connectionURL = String.format("http://%s:%d", CnosDBOptions.DEFAULT_HOST,
-            CnosDBOptions.DEFAULT_PORT);
-
-    @Parameter(names = "--extensions", description = "Specifies a comma-separated list of extension names to be created in each test database", arity = 1)
-    public String extensions = "";
+    public String connectionURL = String.format("http://%s:%d", CnosDBOptions.DEFAULT_HOST, CnosDBOptions.DEFAULT_PORT);
 
     public enum CnosDBOracleFactory implements OracleFactory<CnosDBGlobalState> {
         NOREC {
             @Override
-            public TestOracle create(CnosDBGlobalState globalState) {
+            public TestOracle<CnosDBGlobalState> create(CnosDBGlobalState globalState) {
                 return new CnosDBNoRECOracle(globalState);
             }
         },
-        PQS {
-            @Override
-            public TestOracle create(CnosDBGlobalState globalState) {
-                return new CnosDBPivotedQuerySynthesisOracle(globalState);
-            }
 
-            @Override
-            public boolean requiresAllTablesToContainRows() {
-                return true;
-            }
-        },
+//        not support
+//        PQS {
+//            @Override
+//            public TestOracle create(CnosDBGlobalState globalState) {
+//                return new CnosDBPivotedQuerySynthesisOracle(globalState);
+//            }
+//
+//            @Override
+//            public boolean requiresAllTablesToContainRows() {
+//                return true;
+//            }
+//        },
         HAVING {
             @Override
-            public TestOracle create(CnosDBGlobalState globalState) {
+            public TestOracle<CnosDBGlobalState> create(CnosDBGlobalState globalState) {
                 return new CnosDBTLPHavingOracle(globalState);
             }
 
         },
         QUERY_PARTITIONING {
             @Override
-            public TestOracle create(CnosDBGlobalState globalState) {
-                List<TestOracle> oracles = new ArrayList<>();
+            public TestOracle<CnosDBGlobalState> create(CnosDBGlobalState globalState) {
+                List<TestOracle<CnosDBGlobalState>> oracles = new ArrayList<>();
                 oracles.add(new CnosDBTLPWhereOracle(globalState));
                 oracles.add(new CnosDBTLPHavingOracle(globalState));
                 oracles.add(new CnosDBTLPAggregateOracle(globalState));
-                return new CompositeTestOracle(oracles, globalState);
+                return new CompositeTestOracle<>(oracles, globalState);
             }
-        };
+        }
 
     }
 
