@@ -17,8 +17,8 @@ import sqlancer.common.oracle.TestOracle;
 
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+import java.util.Objects;
 
 public class CnosDBTLPAggregateOracle extends CnosDBTLPBase implements TestOracle<CnosDBGlobalState> {
 
@@ -37,12 +37,11 @@ public class CnosDBTLPAggregateOracle extends CnosDBTLPBase implements TestOracl
         aggregateCheck();
     }
 
-    protected void aggregateCheck() throws Exception {
+    protected void aggregateCheck()  {
+        // now not support
+        // CnosDBAggregateFunction.COUNT
         CnosDBAggregateFunction aggregateFunction = Randomly.fromOptions(CnosDBAggregateFunction.MAX,
-                CnosDBAggregateFunction.MIN, CnosDBAggregateFunction.SUM
-                // now not support
-                //        CnosDBAggregateFunction.COUNT
-        );
+                CnosDBAggregateFunction.MIN, CnosDBAggregateFunction.SUM);
 
         CnosDBAggregate aggregate = gen.generateArgsForAggregate(aggregateFunction.getRandomReturnType(),
                 aggregateFunction);
@@ -51,7 +50,7 @@ public class CnosDBTLPAggregateOracle extends CnosDBTLPBase implements TestOracl
         while (Randomly.getBooleanWithRatherLowProbability()) {
             fetchColumns.add(gen.generateAggregate());
         }
-        select.setFetchColumns(Arrays.asList(aggregate));
+        select.setFetchColumns(fetchColumns);
         if (Randomly.getBooleanWithRatherLowProbability()) {
             select.setOrderByExpressions(gen.generateOrderBy());
         }
@@ -111,18 +110,14 @@ public class CnosDBTLPAggregateOracle extends CnosDBTLPBase implements TestOracl
 
         CnosDBSelectQuery q = new CnosDBSelectQuery(queryString, errors);
         try {
-
             q.executeAndGet(state);
             CnosDBResultSet result = q.getResultSet();
-            if (result == null) {
+
+            if (result == null || !result.next()) {
                 throw new IgnoreMeException();
             }
-            if (!result.next()) {
-                resultString = null;
-                throw new IgnoreMeException();
-            } else {
-                resultString = result.getString(1);
-            }
+
+            resultString = result.getString(1);
 
         } catch (Exception e) {
             if (errors.errorIsExpected(e.getMessage())) {
@@ -138,7 +133,7 @@ public class CnosDBTLPAggregateOracle extends CnosDBTLPBase implements TestOracl
             case SUM:
             case MAX:
             case MIN:
-                return aliasArgs(Arrays.asList(aggregate));
+                return aliasArgs(List.of(aggregate));
             // now not support
             // case COUNT:
             // case AVG:
@@ -157,12 +152,10 @@ public class CnosDBTLPAggregateOracle extends CnosDBTLPBase implements TestOracl
     }
 
     private String getOuterAggregateFunction(CnosDBAggregate aggregate) {
-        switch (aggregate.getFunction()) {
-            case COUNT:
-                return CnosDBAggregateFunction.SUM.toString() + "(agg0)";
-            default:
-                return aggregate.getFunction().toString() + "(agg0)";
+        if (Objects.requireNonNull(aggregate.getFunction()) == CnosDBAggregateFunction.COUNT) {
+            return CnosDBAggregateFunction.SUM + "(agg0)";
         }
+        return aggregate.getFunction() + "(agg0)";
     }
 
     private CnosDBSelect getSelect(List<CnosDBExpression> aggregates, List<CnosDBExpression> from,
